Cherry-pick r290847. rdar://problem/89402338

Crash under ScrollingCoordinatorMac::hasNodeWithAnimatedScrollChanged()
    https://bugs.webkit.org/show_bug.cgi?id=237478
    <rdar://89072235>

    Reviewed by Alan Bujtas.

    Crash data show that r290109 failed to fix this crash; the actual cause of the crash is a
    null m_page on TiledCoreAnimationScrollingCoordinator, diagnosed by noting that the crash
    offset corresponds to the offset of m_renderingUpdateRemainingSteps in Page.

    * WebProcess/WebPage/mac/TiledCoreAnimationScrollingCoordinator.mm:
    (WebKit::TiledCoreAnimationScrollingCoordinator::hasNodeWithAnimatedScrollChanged):

    Canonical link: https://commits.webkit.org/248080@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290847 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.319@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@291646 268f45cc-cd09-0410-ab3c-d52691b4dbfc