Source/WebKit/WebProcess/WebPage/mac/TiledCoreAnimationScrollingCoordinator.mm
@@ -48,11 +48,10 @@ void TiledCoreAnimationScrollingCoordinator::pageDestroyed()
 
 void TiledCoreAnimationScrollingCoordinator::hasNodeWithAnimatedScrollChanged(bool haveAnimatedScrollingNodes)
 {
-    ScrollingCoordinatorMac::hasNodeWithAnimatedScrollChanged(haveAnimatedScrollingNodes);
-
     if (!m_page)
         return;
 
+    ScrollingCoordinatorMac::hasNodeWithAnimatedScrollChanged(haveAnimatedScrollingNodes);
     m_page->setHasActiveAnimatedScrolls(haveAnimatedScrollingNodes);
 }
 
